mobile responsive menu

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>Copyright 2021 • All Rights Reserved LuxSpace by BuildWith Angga</p>
+            <p>Copyright 2021 • <br/> All Rights Reserved LuxSpace by adhasangg</p>
         </div>
     </footer>
     <script src="./assets/js/swiper-configure.js"></script>
